--- a/Results/report.html
+++ b/Results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,90583],[],[[5,0,1,6,[7],[0,216,56551,8],[]],[9,0,1,6,[7],[1,56771,33810],[]]],[],[2,1,2,1]];
+window.output["suite"] = [1,2,3,4,[],[0,0,48620],[],[[5,0,1,6,[7],[0,226,30101,8],[]],[9,0,1,6,[7],[0,30334,18272,10],[]]],[],[2,0,2,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Phptravelsweb","*D:\\python projects\\tests\\phptravelsweb.robot","*../tests/phptravelsweb.robot","*<p>some basic info about the tests\x3c/p>","*User Register a new account","*<p>user use the information available\x3c/p>","*smoke","*Page should have contained text 'My Profile' but did not.","*User login using his correct credentials"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Phptravelsweb","*D:\\python projects\\tests\\phptravelsweb.robot","*../tests/phptravelsweb.robot","*<p>some basic info about the tests\x3c/p>","*User Register a new account","*<p>user use the information available\x3c/p>","*smoke","*axem == axem","*User login using his correct credentials","*WebDriverException: Message: chrome not reachable\n  (Session info: chrome=85.0.4183.102)\n"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:30","fail":1,"label":"Critical Tests","pass":1},{"elapsed":"00:01:30","fail":1,"label":"All Tests","pass":1}],[{"elapsed":"00:01:30","fail":1,"label":"smoke","pass":1}],[{"elapsed":"00:01:31","fail":1,"id":"s1","label":"Phptravelsweb","name":"Phptravelsweb","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:48","fail":2,"label":"Critical Tests","pass":0},{"elapsed":"00:00:48","fail":2,"label":"All Tests","pass":0}],[{"elapsed":"00:00:48","fail":2,"label":"smoke","pass":0}],[{"elapsed":"00:00:49","fail":2,"id":"s1","label":"Phptravelsweb","name":"Phptravelsweb","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1600824232089;
+window.output["baseMillis"] = 1600828452137;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 90594;
+window.output["generated"] = 48639;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
